--- a/staticpage_4556.html
+++ b/staticpage_4556.html
@@ -22,8 +22,6 @@
 
 <link rel="stylesheet" href="css/static_page.css" />
 
-<!--ThemeSettingSubpage-->
-
 <!--ThemeSetting-->
 
 <script src="js/jquery_1.9.1.js"></script>
@@ -72,7 +70,7 @@ img {
 
   <!-- Header Starts Here -->
 
-  <div data-role="header"> <a class="refresh_link" id="back-link" href="#"><img src="images/back_btn.png" alt="home icon" /></a>
+  <div data-role="header"> <a class="refresh_link" id="back-link" href="#"><img src="images/home_icon.png" alt="home icon" /></a>
 
     <h1>Static Page</h1>
 
@@ -84,13 +82,28 @@ img {
 
   
 
-  <div class="staticPage">
+  <div class="staticPageList">
+<ul data-role="listview" >
+	 <li><a rel="external" data-ajax="flase"  class="item link" href="staticpage_4556_9047.html">
+                                	<img src="http://app-gorilla.com/members/wizard/images/no_thumb.jpg" class="ui-li-thumb">
+                                <h2>
+                StaticPage                </h2>
+                <p>Hypertext Transfer Protocol Secure (HTTPS) is a communications protocol for secure communication over a computer network, with especially wide deploym</p>
+                
+            </a></li>
+	
+		 <li><a rel="external" data-ajax="flase"  class="item link" href="staticpage_4556_9048.html">
+                                	<img src="http://app-gorilla.com/members/wizard/images/no_thumb.jpg" class="ui-li-thumb">
+                                <h2>
+                page two test                 </h2>
+                <p>Hypertext T</p>
+                
+            </a></li>
+	
+	
+</ul>
+</div>
 
-  
-
-  <p class="no_data">No Static page content </p>
-
-  </div>
 
   
 
