--- a/index.html
+++ b/index.html
@@ -106,6 +106,15 @@ img {
 		</a>
 	</div>
 
+			<div class="app_feature_list">
+			<a  rel="external" data-ajax="flase"  class="item link" href="staticpage_4557.html">
+																	<img src="images/staticpage.png " />
+										</a>
+		<a  rel="external" data-ajax="flase"  href="staticpage_4557.html">
+				<label>test that pagesss</label>
+		</a>
+	</div>
+
 	
 </div>
 
