--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
 
 <link rel="stylesheet" href="css/common_layout.css" />
 
-<link rel="stylesheet" href="css/common_layout.css" />
-
 <link rel="stylesheet" href="css/grid_menu.css" />
 
 <link rel="stylesheet" href="css/custom-responsive.css" />
@@ -72,7 +70,7 @@ img {
 
   <!-- Logo of app -->
 
-    <div class="logo" align="center"><img src="images/Wooden.png" alt="logo" /></div>
+    <div class="logo" align="center"><img src="images/logo.png" alt="logo" /></div>
 
   
 
