--- a/more.html
+++ b/more.html
@@ -95,37 +95,37 @@
                 <div class="right_menu">
 
 			<div class="app_feature_list">
-			<a  rel="external" data-ajax="flase"  class="item link" href="staticpage_4558.html">
+			<a class="item link" href="staticpage_4558.html"  rel="external" data-ajax="flase"  >
 																	<img src="images/staticpage.png " />
 										</a>
-		<a  rel="external" data-ajax="flase"  href="staticpage_4558.html">
+		<a href="staticpage_4558.html"  rel="external" data-ajax="flase"  >
 				<label>StaticPage</label>
 		</a>
 	</div>
 
 			<div class="app_feature_list">
-			<a  rel="external" data-ajax="flase"  class="item link" href="location_4555.html">
+			<a class="item link" href="location_4555.html"  rel="external" data-ajax="flase"  >
 																	<img src="images/location.png " />
 										</a>
-		<a  rel="external" data-ajax="flase"  href="location_4555.html">
+		<a href="location_4555.html"  rel="external" data-ajax="flase"  >
 				<label>Location</label>
 		</a>
 	</div>
 
 			<div class="app_feature_list">
-			<a  rel="external" data-ajax="flase"  class="item link" href="staticpage_4556.html">
+			<a class="item link" href="staticpage_4556.html"  rel="external" data-ajax="flase"  >
 																	<img src="images/staticpage.png " />
 										</a>
-		<a  rel="external" data-ajax="flase"  href="staticpage_4556.html">
+		<a href="staticpage_4556.html"  rel="external" data-ajax="flase"  >
 				<label>StaticPage</label>
 		</a>
 	</div>
 
 			<div class="app_feature_list">
-			<a  rel="external" data-ajax="flase"  class="item link" href="staticpage_4557.html">
+			<a class="item link" href="staticpage_4557.html"  rel="external" data-ajax="flase"  >
 																	<img src="images/staticpage.png " />
 										</a>
-		<a  rel="external" data-ajax="flase"  href="staticpage_4557.html">
+		<a href="staticpage_4557.html"  rel="external" data-ajax="flase"  >
 				<label>test that pagesss</label>
 		</a>
 	</div>
