--- a/index.html
+++ b/index.html
@@ -62,6 +62,15 @@ img {
 	</div>
 
 			<div class="app_feature_list">
+			<a class="item link" href="location_4559.html"  rel="external" data-ajax="flase"  >
+																	<img src="icon(1).png" />
+										</a>
+		<a href="location_4559.html"  rel="external" data-ajax="flase"  >
+				<label>Location</label>
+		</a>
+	</div>
+
+			<div class="app_feature_list">
 			<a class="item link" href="location_4555.html"  rel="external" data-ajax="flase"  >
 																	<img src="images/location.png " />
 										</a>
