--- a/index.html
+++ b/index.html
@@ -71,6 +71,15 @@ img {
 	</div>
 
 			<div class="app_feature_list">
+			<a class="item link" href="staticpage_4560.html"  rel="external" data-ajax="flase"  >
+																	<img src="images/staticpage.png " />
+										</a>
+		<a href="staticpage_4560.html"  rel="external" data-ajax="flase"  >
+				<label>StaticPage</label>
+		</a>
+	</div>
+
+			<div class="app_feature_list">
 			<a class="item link" href="location_4555.html"  rel="external" data-ajax="flase"  >
 																	<img src="images/location.png " />
 										</a>
