--- a/more.html
+++ b/more.html
@@ -92,64 +92,58 @@
 
             <div data-role="content">
 
-                <div class="right_menu">
+                <div class="grid_menu">
 
 			<div class="app_feature_list">
-			<a class="item link" href="staticpage_4558.html"  rel="external" data-ajax="flase"  >
-																	<img src="images/staticpage.png " />
-										</a>
-		<a href="staticpage_4558.html"  rel="external" data-ajax="flase"  >
-				<label>StaticPage</label>
-		</a>
-	</div>
-
-			<div class="app_feature_list">
-			<a class="item link" href="location_4559.html"  rel="external" data-ajax="flase"  >
+			<a  rel="external" data-ajax="flase"  class="item link" href="location_4559.html">
 																	<img src="icon(1).png" />
 										</a>
-		<a href="location_4559.html"  rel="external" data-ajax="flase"  >
+		<a  rel="external" data-ajax="flase"  href="location_4559.html">
 				<label>Location</label>
 		</a>
 	</div>
 
 			<div class="app_feature_list">
-			<a class="item link" href="staticpage_4560.html"  rel="external" data-ajax="flase"  >
+			<a  rel="external" data-ajax="flase"  class="item link" href="staticpage_4560.html">
 																	<img src="images/staticpage.png " />
 										</a>
-		<a href="staticpage_4560.html"  rel="external" data-ajax="flase"  >
+		<a  rel="external" data-ajax="flase"  href="staticpage_4560.html">
 				<label>StaticPage</label>
 		</a>
 	</div>
 
 			<div class="app_feature_list">
-			<a class="item link" href="location_4555.html"  rel="external" data-ajax="flase"  >
+			<a  rel="external" data-ajax="flase"  class="item link" href="location_4555.html">
 																	<img src="images/location.png " />
 										</a>
-		<a href="location_4555.html"  rel="external" data-ajax="flase"  >
+		<a  rel="external" data-ajax="flase"  href="location_4555.html">
 				<label>Location</label>
 		</a>
 	</div>
 
 			<div class="app_feature_list">
-			<a class="item link" href="staticpage_4556.html"  rel="external" data-ajax="flase"  >
+			<a  rel="external" data-ajax="flase"  class="item link" href="staticpage_4556.html">
 																	<img src="images/staticpage.png " />
 										</a>
-		<a href="staticpage_4556.html"  rel="external" data-ajax="flase"  >
+		<a  rel="external" data-ajax="flase"  href="staticpage_4556.html">
 				<label>StaticPage</label>
 		</a>
 	</div>
 
 			<div class="app_feature_list">
-			<a class="item link" href="staticpage_4557.html"  rel="external" data-ajax="flase"  >
+			<a  rel="external" data-ajax="flase"  class="item link" href="staticpage_4557.html">
 																	<img src="images/staticpage.png " />
 										</a>
-		<a href="staticpage_4557.html"  rel="external" data-ajax="flase"  >
+		<a  rel="external" data-ajax="flase"  href="staticpage_4557.html">
 				<label>test that pagesss</label>
 		</a>
 	</div>
 
 	
+     
 </div>
+
+<!-- <a onclick="window.open('video_1895.html','_self', 'location=yes')" class="ui-link ui-btn ui-icon-custom ui-btn-icon-top ui-btn-active" data-gourl="video_1895.html" rel="external" data-icon="custom" id="tab2" href="video_1895.html">Videos</a> -->
 
 
             </div><!-- /content -->
@@ -160,7 +154,7 @@
 
             <style> .nav-glyphish-example .ui-btn .ui-btn-inner { padding-top: 40px !important; width: 60px!important;}		.nav-glyphish-example .ui-btn .ui-icon { width: 30px!important; height: 30px!important; margin-left: -15px !important; box-shadow: none!important; -moz-box-shadow: none!important; -webkit-box-shadow: none!important; -webkit-border-radius: 0 !important; border-radius: 0 !important; }#tab1 .ui-icon { background:  url("icons_tech_1579.png") 50% 50% no-repeat; background-size: 50px 50px; }#tab2 .ui-icon { background:  url("icons_communication_1092.png") 50% 50% no-repeat; background-size: 50px 50px; }#tab3 .ui-icon { background:  url("64Px_-_504-11.png") 50% 50% no-repeat; background-size: 30px 30px; }#tab4 .ui-icon { background:  url("64Px_-_504-210.png") 50% 50% no-repeat; background-size: 30px 30px; }#tab5 .ui-icon { background:  url("more.png") 50% 50% no-repeat; background-size: 30px 30px; }</style>
 
-            <div data-role="footer" data-position="fixed" class="nav-glyphish-example" data-id="myfooter" data-theme="a" data-tap-toggle="false"><div data-role="navbar" class="nav-glyphish-example"><ul><li><a href="staticpage_4558.html" id="tab2" data-icon="custom" rel="external"  data-gourl="staticpage_4558.html" class="" onclick="window.open('staticpage_4558.html','_self', 'location=yes')">StaticPage</a></li><li><a href="location_4559.html" id="tab2" data-icon="custom" rel="external"  data-gourl="location_4559.html" class="" onclick="window.open('location_4559.html','_self', 'location=yes')">Location</a></li><li><a href="staticpage_4560.html" id="tab2" data-icon="custom" rel="external"  data-gourl="staticpage_4560.html" class="" onclick="window.open('staticpage_4560.html','_self', 'location=yes')">StaticPage</a></li><li><a href="location_4555.html" id="tab2" data-icon="custom" rel="external"  data-gourl="location_4555.html" class="" onclick="window.open('location_4555.html','_self', 'location=yes')">Location</a></li><li><a href="staticpage_4556.html" id="tab2" data-icon="custom" rel="external"  data-gourl="staticpage_4556.html" class="" onclick="window.open('staticpage_4556.html','_self', 'location=yes')">StaticPage</a></li><li><a href="staticpage_4557.html" id="tab2" data-icon="custom" rel="external"  data-gourl="staticpage_4557.html" class="" onclick="window.open('staticpage_4557.html','_self', 'location=yes')">test that pagesss</a></li><li><a href="more.html" id="tab5" data-icon="custom" rel="external">More</a></li></ul></div></div>
+            <div data-role="footer" data-position="fixed" class="nav-glyphish-example" data-id="myfooter" data-theme="a" data-tap-toggle="false"><div data-role="navbar" class="nav-glyphish-example"><ul><li><a href="location_4559.html" id="tab2" data-icon="custom" rel="external"  data-gourl="location_4559.html" class="" onclick="window.open('location_4559.html','_self', 'location=yes')">Location</a></li><li><a href="staticpage_4560.html" id="tab2" data-icon="custom" rel="external"  data-gourl="staticpage_4560.html" class="" onclick="window.open('staticpage_4560.html','_self', 'location=yes')">StaticPage</a></li><li><a href="location_4555.html" id="tab2" data-icon="custom" rel="external"  data-gourl="location_4555.html" class="" onclick="window.open('location_4555.html','_self', 'location=yes')">Location</a></li><li><a href="staticpage_4556.html" id="tab2" data-icon="custom" rel="external"  data-gourl="staticpage_4556.html" class="" onclick="window.open('staticpage_4556.html','_self', 'location=yes')">StaticPage</a></li><li><a href="staticpage_4557.html" id="tab2" data-icon="custom" rel="external"  data-gourl="staticpage_4557.html" class="" onclick="window.open('staticpage_4557.html','_self', 'location=yes')">test that pagesss</a></li><li><a href="more.html" id="tab5" data-icon="custom" rel="external">More</a></li></ul></div></div>
 
         </div>	
 
