--- a/staticpage_4560_9057.html
+++ b/staticpage_4560_9057.html
@@ -22,6 +22,8 @@
 
 <link rel="stylesheet" href="css/static_page.css" />
 
+<!--ThemeSettingSubpage-->
+
 <!--ThemeSetting-->
 
 <script src="js/jquery_1.9.1.js"></script>
@@ -70,9 +72,9 @@ img {
 
   <!-- Header Starts Here -->
 
-  <div data-role="header"> <a class="refresh_link" id="back-link" href="#"><img src="images/home_icon.png" alt="home icon" /></a>
+  <div data-role="header"> <a class="refresh_link" id="back-link" href="#"><img src="images/back_btn.png" alt="home icon" /></a>
 
-    <h1>StaticPage</h1>
+    <h1>page set to sort</h1>
 
     <a class="help_link"><img src="images/help_icon.png" alt="help icon" /></a> </div>
 
@@ -82,20 +84,13 @@ img {
 
   
 
-  <div class="staticPageList">
-<ul data-role="listview" >
-	 <li><a rel="external" data-ajax="flase"  class="item link" href="staticpage_4560_9057.html">
-                                	<img src="http://app-gorilla.com/members/wizard/images/no_thumb.jpg" class="ui-li-thumb">
-                                <h2>
-                page set to sort                </h2>
-                <p>test that part some sort of address test that part</p>
-                
-            </a></li>
-	
-	
-</ul>
-</div>
+  <div class="staticPage">
 
+  
+
+  test that part some sort of address to test that part some sort of address
+
+  </div>
 
   
 
