--- a/staticpage_4560_9058.html
+++ b/staticpage_4560_9058.html
@@ -22,6 +22,8 @@
 
 <link rel="stylesheet" href="css/static_page.css" />
 
+<!--ThemeSettingSubpage-->
+
 <!--ThemeSetting-->
 
 <script src="js/jquery_1.9.1.js"></script>
@@ -70,7 +72,7 @@ img {
 
   <!-- Header Starts Here -->
 
-  <div data-role="header"> <a class="refresh_link" id="back-link" href="#"><img src="images/home_icon.png" alt="home icon" /></a>
+  <div data-role="header"> <a class="refresh_link" id="back-link" href="#"><img src="images/back_btn.png" alt="home icon" /></a>
 
     <h1>StaticPage</h1>
 
@@ -82,28 +84,13 @@ img {
 
   
 
-  <div class="staticPageList">
-<ul data-role="listview" >
-	 <li><a rel="external" data-ajax="flase"  class="item link" href="staticpage_4560_9057.html">
-                                	<img src="http://app-gorilla.com/members/wizard/images/no_thumb.jpg" class="ui-li-thumb">
-                                <h2>
-                page set to sort                </h2>
-                <p>test that part some sort of address test that part</p>
-                
-            </a></li>
-	
-		 <li><a rel="external" data-ajax="flase"  class="item link" href="staticpage_4560_9058.html">
-                                	<img src="http://app-gorilla.com/members/wizard/images/no_thumb.jpg" class="ui-li-thumb">
-                                <h2>
-                StaticPage                </h2>
-                <p>sort to test that part</p>
-                
-            </a></li>
-	
-	
-</ul>
-</div>
+  <div class="staticPage">
 
+  
+
+  test that part some sort of address to test that part soem sort of address to test that part&nbsp;
+
+  </div>
 
   
 
