--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ img {
 																	<img src="icon(1).png" />
 										</a>
 		<a  rel="external" data-ajax="flase"  href="location_4559.html">
-				<label>Location</label>
+				<label>տպագրության և տպագրական արդյունաբերության համար նա</label>
 		</a>
 	</div>
 
@@ -113,6 +113,15 @@ img {
 										</a>
 		<a  rel="external" data-ajax="flase"  href="staticpage_4560.html">
 				<label>StaticPage</label>
+		</a>
+	</div>
+
+			<div class="app_feature_list">
+			<a  rel="external" data-ajax="flase"  class="item link" href="video_4561.html">
+																	<img src="images/video.png " />
+										</a>
+		<a  rel="external" data-ajax="flase"  href="video_4561.html">
+				<label>Videos</label>
 		</a>
 	</div>
 
