--- a/staticpage_4560.html
+++ b/staticpage_4560.html
@@ -87,8 +87,8 @@ img {
 	 <li><a rel="external" data-ajax="flase"  class="item link" href="staticpage_4560_9057.html">
                                 	<img src="http://app-gorilla.com/members/wizard/images/no_thumb.jpg" class="ui-li-thumb">
                                 <h2>
-                page set to sort                </h2>
-                <p>test that part some sort of address test that part</p>
+                տպագրության և տպագրական արդյունաբերության համար նա                </h2>
+                <p>տպագրության և տպագրական արդյունաբերության համար նախատեսված մոդելային տեքստ է: Սկսած 1500-ականներից` Lorem Ipsum-ը հանդիսացել է տպագրական արդյունաբերու</p>
                 
             </a></li>
 	
