--- a/location_4559.html
+++ b/location_4559.html
@@ -272,7 +272,7 @@ setTimeout(loadScript,3000);
 
   <div data-role="header"> <a href="index.html" class="refresh_link" data-role="button" rel="external" data-ajax="false" role="button"><img alt="home icon" src="images/home_icon.png"></a>
 
-    <h1>Location</h1>
+    <h1>տպագրության և տպագրական արդյունաբերության համար նա</h1>
 
     <a class="help_link"><img src="images/help_icon.png" alt="help icon" /></a> </div>
 
@@ -288,7 +288,7 @@ setTimeout(loadScript,3000);
 
   <!-- Location Address -->
 
-  <div class="location_address"><p><br>dfdsaf</p></div> 
+  <div class="location_address"><p><br>տպագրության և տպագրական արդյունաբերության համար նախատեսված մոդելային տեքստ է: Սկսած 1500-ականներից` Lorem Ipsum-ը հանդիսացել է տպագրական արդյունաբերության ստանդարտ մոդելային տեքստ, ինչը մի անհայտ տպագրիչի կողմից տարբեր տառատեսակների օրինակների գիրք ստեղծե</p></div> 
 
   <!-- Location Address Ends Here -->
 
