--- a/staticpage_4560_9057.html
+++ b/staticpage_4560_9057.html
@@ -74,7 +74,7 @@ img {
 
   <div data-role="header"> <a class="refresh_link" id="back-link" href="#"><img src="images/back_btn.png" alt="home icon" /></a>
 
-    <h1>page set to sort</h1>
+    <h1>տպագրության և տպագրական արդյունաբերության համար նա</h1>
 
     <a class="help_link"><img src="images/help_icon.png" alt="help icon" /></a> </div>
 
@@ -88,7 +88,16 @@ img {
 
   
 
-  test that part some sort of address to test that part some sort of address
+  տպագրության և տպագրական արդյունաբերության համար նախատեսված մոդելային 
+տեքստ է: Սկսած 1500-ականներից` Lorem Ipsum-ը հանդիսացել է տպագրական 
+արդյունաբերության ստանդարտ մոդելային տեքստ, ինչը մի անհայտ տպագրիչի 
+կողմից տարբեր տառատեսակների օրինակների գիրք ստեղծելու ջանքերի արդյունք 
+է: Այս տեքստը ոչ միայն կարողացել է գոյատևել հինգ դարաշրջան, այլև 
+ներառվել է էլեկտրոնային տպագրության մեջ` մնալով էապես անփոփոխ: Այն 
+հայտնի է դարձել 1960-ականներին Lorem Ipsum բովանդակող Letraset էջերի 
+թողարկման արդյունքում, իսկ ավելի ուշ համակարգչային  տպագրության այնպիսի 
+ծրագրերի թողարկման հետևանքով, ինչպիսին է Aldus PageMaker-ը, որը ներառում
+ է Lorem Ipsum-ի տարատեսակներ:
 
   </div>
 
